# meinraum

./: README.md  index.json
Documentation/: REGISTRE.md
portfolio-tauri/: README.md  index.html  package.json  setup.sh  tailwind.config.js  vite.config.js
portfolio-tauri/.github/workflows/: release.yml
portfolio-tauri/src/: index.css  main.jsx
portfolio-tauri/src-tauri/: Cargo.toml  tauri.conf.json
portfolio-tauri/src-tauri/src/: lib.rs  main.rs
portfolio-tauri/src/components/desktop/: AboutWindow.jsx  ArchiveWindow.jsx  CaseStudy.jsx  ContactWindow.jsx  DesktopIcon.jsx  DocumentationWindow.jsx  LaboratoryWindow.jsx  TerminalWindow.jsx  TitleBar.jsx  Window.jsx  WorkExplorer.jsx
portfolio-tauri/src/hooks/: useGitHubData.js
portfolio-tauri/src/lib/: ThemeContext.jsx  github.js
portfolio-tauri/src/pages/: Desktop.jsx
